--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
